tests/toylang/neg/001248_mutation.toylang
program a = { sleep if a then sleep; } .
